xpcom/threads/VsyncTaskManager.h
@@ -16,7 +16,7 @@ class VsyncTaskManager : public TaskManager {
   static void Cleanup() { gHighPriorityTaskManager = nullptr; }
   static void Init();
 
-  void DidRunTask() override;
+  void WillRunTask() override;
 
  private:
   static StaticRefPtr<VsyncTaskManager> gHighPriorityTaskManager;
